--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "George Codat Tudoran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.12.4",
+    "express": "^4.13.4",
+    "lodash": "^4.13.1"
   }
 }
