--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.13.4",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "mongoose": "^4.5.1"
   }
 }
