--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.12.4",
     "express": "^4.13.4",
     "lodash": "^4.13.1",
-    "mongoose": "^4.5.1"
+    "mongoose": "^4.5.1",
+    "request": "^2.72.0"
   }
 }
