--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "George Codat Tudoran",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "body-parser": "^1.12.4",
     "express": "^4.13.4",
     "lodash": "^4.13.1",
