--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.6",
     "body-parser": "^1.12.4",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.1",
