--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.1",
+    "redis": "^2.6.2",
     "request": "^2.72.0"
   }
 }
